# VisualNavigation

./: .gitattributes  .gitignore  README.md
img_treat/: package.xml  setup.cfg  setup.py
img_treat/img_treat/: img_treat.py  img_treat_cv.py
my_robot/: package.xml  setup.cfg  setup.py
my_robot/description/: camera.xacro  gazebo_control.xacro  robot_core.xacro
my_robot/launch/: launch_ign.launch.py  launch_ign_2.launch.py  rsp.launch.py
nav_control/: CMakeLists.txt  package.xml
nav_control/behavior_tree_xml/: nav_control_bt.xml
nav_control/include/nav_control/: BatteryChecker.hpp  ChangeLine.hpp  GetLine.hpp  NavLine.hpp  Recharge.hpp
nav_control/include/nav_control/ctrl_support/: BTActionNode.hpp  BTLifecycleCtrlNode.hpp
nav_control/launch/: launch_husky.launch.py  launch_husky_n.launch.py  launch_husky_w.launch.py  launch_ign.launch.py  launch_nav.launch.py  launch_world.launch.py
nav_control/scripts/: tomato_gen.ipynb
nav_control/src/: nav_main.cpp
nav_control/src/nav_control/: BatteryChecker.cpp  ChangeLine.cpp  GetLine.cpp  NavLine.cpp  Recharge.cpp
odom_recorder/: package.xml  setup.cfg  setup.py
odom_recorder/odom_recorder/: odom_recorder.py  pose_recorder.py
segmentation_camera/: CMakeLists.txt  package.xml
segmentation_camera/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro
segmentation_camera/launch/: launch_ign.launch.py  rsp.launch.py
segmentation_camera/scripts/.ipynb_checkpoints/: tomato_gen-checkpoint.ipynb
world_gen/: CMakeLists.txt  package.xml
world_gen/scripts/: tomato_gen.ipynb  tomato_gen_no_robot.ipynb
world_gen/scripts/.ipynb_checkpoints/: tomato_gen_no_robot-checkpoint.ipynb
world_gen/templates/tomato_world/{{cookiecutter.world_name}}/: {{cookiecutter.world_name}}.sdf
world_gen/templates/tomato_world_no_robot/{{cookiecutter.world_name}}/: {{cookiecutter.world_name}}.sdf
